--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,9 @@
 spring.application.name=backend
 
-logging.level.org.springframework.security = trace
+# DataSource Properties
+spring.datasource.driver-class-name=org.postgresql.Driver
+spring.datasource.url=jdbc:postgresql://localhost:5432/requestapprovalsystem
+spring.datasource.username=postgres
+spring.datasource.password=postgres
+
+logging.level.org.springframework.security=trace
