--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -21,7 +21,9 @@ jobs:
           cache: maven
 
       - name: Run Tests with Maven
-        run: ./mvnw test
+        run: |
+          chmod +x ./mvnw
+          ./mvnw test
 
       - name: Login to Docker Hub
         uses: docker/login-action@v3
