Focused on changing DevOps items and added email service. Added global exception handling with an error page. Fixed bug where emails were case-sensitive. Same email could be used depending on capitalization (same with logging in)

--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -6,4 +6,9 @@ spring.datasource.url=jdbc:postgresql://localhost:5432/requestapprovalsystem
 spring.datasource.username=postgres
 spring.datasource.password=postgres
 
+# JavaMailSender Properties
+mail.sender.username=your_gmail
+mail.sender.password=your_gmail_app_password
+
+# Logging Properties
 logging.level.org.springframework.security=trace
