--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -26,6 +26,9 @@ jobs:
     runs-on: self-hosted
     needs: build
     steps:
+      - name: Checkout Code
+        uses: actions/checkout@v4
+
       - name: Set up SSH
         run: |
           mkdir -p ~/.ssh
@@ -33,33 +36,31 @@ jobs:
           chmod 600 ~/.ssh/id_rsa
           ssh-keyscan -H "${{ secrets.EC2_PUBLIC_IP }}" >> ~/.ssh/known_hosts || echo "ssh-keyscan failed"
 
+      - name: Copy docker-compose.prod.yml to EC2
+        run: |
+          scp -o StrictHostKeyChecking=no ./docker-compose.prod.yml ec2-user@${{ secrets.EC2_PUBLIC_IP }}:/home/ec2-user/deployment/
+          scp -o StrictHostKeyChecking=no ./nginx ec2-user@${{ secrets.EC2_PUBLIC_IP }}:/home/ec2-user/deployment/
+
       - name: Deploy to EC2
         run: |
           ssh -o StrictHostKeyChecking=no ec2-user@${{ secrets.EC2_PUBLIC_IP }} << 'EOF'
             set -e
-
-            # Pull the latest Docker image
-            docker pull ${{ secrets.DOCKERHUB_USERNAME }}/requestapprovalsystem:latest
   
             # Fetch secrets from AWS Secrets Manager
             echo "Fetching RDS credentials from Secrets Manager..."
             SECRET=$(aws secretsmanager get-secret-value --secret-id ${{ secrets.DB_SECRETS_ID }} --query SecretString --output text)
-            DB_USERNAME=$(echo $SECRET | jq -r '.username')
-            DB_PASSWORD=$(echo $SECRET | jq -r '.password')
-            DB_URL=jdbc:postgresql://${{ secrets.DB_ENDPOINT }}:5432/${{ secrets.DB_NAME }}
+            export DB_USERNAME=$(echo $SECRET | jq -r '.username')
+            export DB_PASSWORD=$(echo $SECRET | jq -r '.password')
+            export DB_URL=jdbc:postgresql://${{ secrets.DB_ENDPOINT }}:5432/${{ secrets.DB_NAME }}
+
+            export MAIL_SENDER_USERNAME=${{ secrets.MAIL_SENDER_USERNAME }}
+            export MAIL_SENDER_PASSWORD=${{ secrets.MAIL_SENDER_PASSWORD }}
   
             # Stop and remove the existing Docker container
             echo "Stopping and removing existing Docker container..."
-            docker stop requestapprovalsystem || true
-            docker rm requestapprovalsystem || true
+            docker compose -f /home/ec2-user/deployment/docker-compose.prod.yml down || true
   
             # Build and run the new Docker container
             echo "Starting the Docker container..."
-            docker run -d \
-              --name requestapprovalsystem \
-              -p 8080:8080 \
-              -e SPRING_DATASOURCE_USERNAME=$DB_USERNAME \
-              -e SPRING_DATASOURCE_PASSWORD=$DB_PASSWORD \
-              -e SPRING_DATASOURCE_URL=$DB_URL \
-              ${{ secrets.DOCKERHUB_USERNAME }}/requestapprovalsystem:latest
+            docker compose -f /home/ec2-user/deployment/docker-compose.prod.yml up -d
           EOF
