--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -39,7 +39,7 @@ jobs:
       - name: Copy docker-compose.prod.yml to EC2
         run: |
           scp -o StrictHostKeyChecking=no ./docker-compose.prod.yml ec2-user@${{ secrets.EC2_PUBLIC_IP }}:/home/ec2-user/deployment/
-          scp -o StrictHostKeyChecking=no ./nginx ec2-user@${{ secrets.EC2_PUBLIC_IP }}:/home/ec2-user/deployment/
+          scp -r -o StrictHostKeyChecking=no ./nginx ec2-user@${{ secrets.EC2_PUBLIC_IP }}:/home/ec2-user/deployment/
 
       - name: Deploy to EC2
         run: |
