--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -38,6 +38,8 @@ jobs:
 
       - name: Copy docker-compose.prod.yml to EC2
         run: |
+
+          # Copy docker compose file and nginx folder from GitHub repo onto EC2 instance
           scp -o StrictHostKeyChecking=no ./docker-compose.prod.yml ec2-user@${{ secrets.EC2_PUBLIC_IP }}:/home/ec2-user/deployment/
           scp -r -o StrictHostKeyChecking=no ./nginx ec2-user@${{ secrets.EC2_PUBLIC_IP }}:/home/ec2-user/deployment/
 
@@ -51,8 +53,9 @@ jobs:
             SECRET=$(aws secretsmanager get-secret-value --secret-id ${{ secrets.DB_SECRETS_ID }} --query SecretString --output text)
             export DB_USERNAME=$(echo $SECRET | jq -r '.username')
             export DB_PASSWORD=$(echo $SECRET | jq -r '.password')
-            export DB_URL=jdbc:postgresql://${{ secrets.DB_ENDPOINT }}:5432/${{ secrets.DB_NAME }}
 
+            # Set required environment variables
+            export DB_URL=jdbc:postgresql://${{ secrets.DB_ENDPOINT }}:5432/${{ secrets.DB_NAME }}
             export MAIL_SENDER_USERNAME='${{ secrets.MAIL_SENDER_USERNAME }}'
             export MAIL_SENDER_PASSWORD='${{ secrets.MAIL_SENDER_PASSWORD }}'
 
