--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -10,6 +10,22 @@ jobs:
   build:
     runs-on: self-hosted
     steps:
+      - name: Checkout Code
+        uses: actions/checkout@v4
+
+      - name: Setup JDK
+        uses: actions/setup-java@v4
+        with:
+          distribution: 'corretto'
+          java-version: '21'
+
+      - name: Build with Maven
+        run: |
+          ./mvn -B package --file pom.xml
+
+  build_and_push_docker_image:
+    runs-on: self-hosted
+    steps:
       - name: Login to Docker Hub
         uses: docker/login-action@v3
         with:
