--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -25,6 +25,7 @@ jobs:
 
   build_and_push_docker_image:
     runs-on: self-hosted
+    needs: build
     steps:
       - name: Login to Docker Hub
         uses: docker/login-action@v3
@@ -40,7 +41,7 @@ jobs:
           
   deploy:
     runs-on: self-hosted
-    needs: build
+    needs: build_and_push_docker_image
     steps:
       - name: Checkout Code
         uses: actions/checkout@v4
