--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -21,7 +21,7 @@ jobs:
 
       - name: Build with Maven
         run: |
-          ./mvn -B package --file pom.xml
+          ./mvnw -B package --file pom.xml
 
   build_and_push_docker_image:
     runs-on: self-hosted
