--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -20,7 +20,7 @@ jobs:
       - name: Build with Maven
         run: |
           chmod +x ./mvnw
-          ./mvnw -B package --file pom.xml
+          ./mvnw -B -DskipTests package --file pom.xml
 
   build_and_push_docker_image:
     runs-on: self-hosted
