--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -5,7 +5,7 @@ on:
     branches: [ "main" ]
 
 jobs:
-  build:
+  build_and_test:
     runs-on: self-hosted
     steps:
       - name: Checkout Code
@@ -17,14 +17,22 @@ jobs:
           distribution: 'corretto'
           java-version: '21'
 
-      - name: Build with Maven
+      - name: Build and Test with Maven
         run: |
           chmod +x ./mvnw
-          ./mvnw -B -DskipTests package --file pom.xml
+          
+          # Fetch secrets from AWS Secrets Manager
+          echo "Fetching RDS credentials from Secrets Manager..."
+          SECRET=$(aws secretsmanager get-secret-value --secret-id ${{ secrets.DB_SECRETS_ID }} --query SecretString --output text)
+          export SPRING_DATASOURCE_USERNAME=$(echo $SECRET | jq -r '.username')
+          export SPRING_DATASOURCE_PASSWORD=$(echo $SECRET | jq -r '.password')
+          export SPRING_DATASOURCE_URL=jdbc:postgresql://${{ secrets.DB_ENDPOINT }}:5432/${{ secrets.DB_NAME }}
+
+          ./mvnw -B package --file pom.xml
 
   build_and_push_docker_image:
     runs-on: self-hosted
-    needs: build
+    needs: build_and_test
     steps:
       - name: Login to Docker Hub
         uses: docker/login-action@v3
